welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not found: type avance
	       avance
               ^PatternPicture:2: error: not found: type color
	def faireMotif(c:color):
                         ^PatternPicture:2: error: only classes can have declared but undefined members
	def faireMotif(c:color):
            ^