welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	def faireMotif(c:color):
	       avance
}
